Bring back Open GLES2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,12 +216,17 @@ if( MSVC )
 
 	# String pooling
 	# Function-level linking
+	# Disable run-time type information
+	set( ALL_C_FLAGS "/GF /Gy /permissive- /DHAVE_SOFTPOLY" )
+
 	if ( HAVE_VULKAN )
-		set( ALL_C_FLAGS "/GF /Gy /permissive- /DHAVE_VULKAN" )
-	else()
-		set( ALL_C_FLAGS "/GF /Gy /permissive-" )
+	   set( ALL_C_FLAGS "${ALL_C_FLAGS} /DHAVE_VULKAN" )
 	endif()
 
+	if ( HAVE_GLES2 )
+	   set( ALL_C_FLAGS "${ALL_C_FLAGS} /DHAVE_GLES2" )
+	endif()
+	
 	# Use SSE 2 as minimum always as the true color drawers needs it for __vectorcall
 	#set( ALL_C_FLAGS "${ALL_C_FLAGS} /arch:SSE2") # This is already the default
 
