--- a/src/win32/zdoom.rc
+++ b/src/win32/zdoom.rc
@@ -217,18 +217,21 @@ BEGIN
     GROUPBOX        "Video settings",IDC_STATIC,8,155,68,65
     CONTROL         "&Fullscreen",IDC_WELCOME_FULLSCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,206,48,10
     GROUPBOX        "Extra Graphics",IDC_STATIC,159,155,59,64
-    CONTROL         "Disable &autoload",IDC_WELCOME_NOAUTOLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,177,65,10
-    CONTROL         "&Lights",IDC_WELCOME_LIGHTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,172,43,10
-    CONTROL         "&Brightmaps",IDC_WELCOME_BRIGHTMAPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,184,51,10
-    CONTROL         "&Widescreen",IDC_WELCOME_WIDESCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,195,48,12
+    CONTROL         "Disable &autoload",IDC_WELCOME_NOAUTOLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,86,166,65,10
+    CONTROL         "&Lights",IDC_WELCOME_LIGHTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,165,43,10
+    CONTROL         "&Brightmaps",IDC_WELCOME_BRIGHTMAPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,177,51,10
+    CONTROL         "&Widescreen",IDC_WELCOME_WIDESCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,164,188,48,12
     CONTROL         "&Don't ask me again",IDC_DONTASKIWAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,190,72,10
     DEFPUSHBUTTON   "&Play LZDoom",IDOK,8,227,90,14
     PUSHBUTTON      "E&xit",IDCANCEL,166,227,50,14
-    CONTROL         "&OpenGL",IDC_WELCOME_VULKAN1,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,13,180,41,10
+    CONTROL         "&OpenGL",IDC_WELCOME_VULKAN1,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,13,167,41,10
 #ifdef HAVE_VULKAN
-    CONTROL         "&Vulkan",IDC_WELCOME_VULKAN2,"Button",BS_AUTORADIOBUTTON,13,191,37,10
+    CONTROL         "&Vulkan",IDC_WELCOME_VULKAN2,"Button",BS_AUTORADIOBUTTON,13,176,37,10
 #endif
-    CONTROL         "&SoftPoly",IDC_WELCOME_VULKAN3,"Button",BS_AUTORADIOBUTTON,13,170,43,10
+    CONTROL         "&SoftPoly",IDC_WELCOME_VULKAN3,"Button",BS_AUTORADIOBUTTON,13,185,43,10
+#ifdef HAVE_GLES2
+    CONTROL         "OpenGL &ES",IDC_WELCOME_VULKAN4,"Button",BS_AUTORADIOBUTTON,13,194,53,10
+#endif
 END
 
 IDD_CRASHDIALOG DIALOGEX 0, 0, 415, 308
